# TelescopeTripleGem

./: gemcell.geo  gemcell.msh
70(30)20KeV/: 200.txt  3gemcell.geo  3gemcell_WTlel.sif
70(30)20KeV/3gemcell/: mesh.header
70(30)40KeV/: avalanche.cc  dcs.txt
70(30)40KeV/3gemcell/: 3gemcell.result
75(25)20KeV/: 3gemcell.sif  avalanche.cc  makefile
75(25)20KeV/3gemcell/: mesh.boundary
75(25)40KeV/3gemcell/: 3gemcell_WTlel.result  mesh.elements  mesh.nodes
GEM/: a.csv  avalancheAnalysis.py  electronAnalysis.py  generalSimulation.sh  prepare.sh
GEM/400/: gemcell.geo  gemcell.sif  muon_track.C
GEM/410/: gemcell.sif  muon_track.C
GEM/420/: gemcell.sif  muon_track.C
GEM/430/: gemcell.sif  muon_track.C
GEM/440/: gemcell.sif  muon_track.C
GEM/450/: gemcell.sif  muon_track.C
GEM/460/: gemcell.sif  muon_track.C
GEM/470/: gemcell.sif  muon_track.C
GEM/480/: gemcell.sif  muon_track.C
GEM/490/: gemcell.sif  muon_track.C
GEM/500/: CMakeLists.txt  muon_track.C
GEM/avalancheGraphs/: DesEleNumProm-Ar-E.eps  DesEleNumProm-Ar-V.eps  DesEleNumProm-E-Ar.eps  DesEleNumProm-V-Ar.eps  DesEleNumTot-Ar-E.eps  DesEleNumTot-Ar-V.eps  DesEleNumTot-E-Ar.eps  DesEleNumTot-V-Ar.eps  DesGananciaProm-Ar-E.eps  DesGananciaProm-Ar-V.eps  DesGananciaProm-E-Ar.eps  DesGananciaProm-V-Ar.eps  (+26 more)
TGEM/: CMakeLists.txt  avalancheAnalysis.py  electronAnalysis.py  gemcell.geo  gemcell.sif  muon_track.C
TTGEM/: TGEM.hh  TTGEM.hh  atmosphericEventsGenerator.py  muon_track.C  muonsDistributions.py  parallel.sh  trackAnalysis.py  trackModule.py
repositorio/: heatTransfer.py
(+252 files in other folders)
